--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ section .title::after{
 .about .about-content .left img{
     height: 600px;
     width: 400px;
-    object-fit:contain;
+    object-fit:scale-down;
     border-radius: 6px;
 }
 .about .about-content .right{
